wip/hollo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hollo-service
  labels:
    app: hollo
  namespace: yorch
spec:
  selector:
    app: hollo
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 80
